Fix user paths on firefox

--- a/frontend/src/style.scss
+++ b/frontend/src/style.scss
@@ -179,6 +179,7 @@ pre.code {
     height: 720px;
     svg {
         height: 100% !important;
+        width: 100%;
     }
 }
 .secondary {
